--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -240,13 +240,13 @@
 
 <script id="person-popup" type="text/x-handlebars-template">
     <strong><span title="{{ join groups ', '}} - {{ postcode }}">{{ name }}</span></strong>&nbsp;&nbsp;&nbsp;
-    <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
+    <a href="@play.Play.application().configuration().getString("crm.url").stripSuffix("/")/{{ partyId }}" title="Open in CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
     <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-envelope-o fa-lg"></i></a>
 </script>
 
 <script id="organisation-popup" type="text/x-handlebars-template">
     <strong><span title="{{ join groups ', '}} - {{ postcode }}">{{ name }}</span></strong>&nbsp;&nbsp;&nbsp;
-    <a href="@play.Play.application().configuration().getString("crm.url")/{{ partyId }}" title="Open in CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
+    <a href="@play.Play.application().configuration().getString("crm.url").stripSuffix("/")/{{ partyId }}" title="Open in CRM" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-gear fa-lg"></i></a>
     <a href="mailto:{{ emailAddress }}?bcc=@play.Play.application().configuration().getString("crm.bcc")" title="Email {{ emailAddress }}" target="_blank" class="btn btn-default btn-xs"><i class="fa fa-envelope-o fa-lg"></i></a>
     <a href="{{startWith 'http://' website }}" target="_blank" title="Open {{stripPrefix 'http://' website }}" class="btn btn-default btn-xs"><i class="fa fa-external-link fa-lg"></i></a>
 </script>
