--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -72,7 +72,7 @@
             }
         });
 
-        var mapTiles = L.tileLayer('http://{s}.tile.thunderforest.com/transport/{z}/{x}/{y}.png', {
+        var mapTiles = L.tileLayer('https://{s}.tile.thunderforest.com/transport/{z}/{x}/{y}.png?apikey=d2eccc31f9dd43a08ee4b78dc3b3be0e', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors. Map style &copy; <a href="http://www.thunderforest.com/">Thunderforest</a>'
         });
 
